--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=app
+spring.application.name=Project-App
+spring.datasource.url=jdbc:mysql://localhost:3306/TransactionBase
+spring.datasource.username=root
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
